feat: add generic broadcast source settings
